# Parselmouth

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
LPC/: FormantPath.cpp  (+11 more)
boost.numpy/: CMakeLists.txt
boost.numpy/src/: ndarray.cpp  ufunc.cpp
praat/: .gitignore  CMakeLists.txt
praat/EEG/: CMakeLists.txt  ERP.h  ERPWindow.cpp
praat/FFNet/: CMakeLists.txt
praat/LPC/: CMakeLists.txt  FormantPathEditor.h  FormantPath_def.h  LPC.cpp  LPC_and_Formant.cpp  LPC_and_Formant.h  LPC_and_LineSpectralFrequencies.h  LPC_and_Polynomial.cpp  LPC_and_Polynomial.h  LPC_def.h  LineSpectralFrequencies.cpp  LineSpectralFrequencies.h  LineSpectralFrequencies_def.h  Makefile  PowerCepstrum.cpp  PowerCepstrum.h  Sound_and_LPC.cpp  Sound_and_LPC.h  Sound_to_Formant_mt.h  Sound_to_PowerCepstrogram.cpp  Sound_to_PowerCepstrogram.h  VocalTractTier.cpp  manual_LPC.cpp  praat_LPC_init.cpp
praat/artsynth/: CMakeLists.txt  praat_Artsynth.cpp
praat/contrib/ola/: CMakeLists.txt  KNN.cpp  KNN_threads.cpp
praat/dwsys/: BinaryIndexedTree.h  CMakeLists.txt  ChebyshevSeries.cpp  Collection_extensions.h  Command.h  DoublyLinkedList.h  ExtendedReal.h  ExtendedReal_def.h  FileInMemory.h  FunctionSeries.cpp  NUM2.cpp  NUM2.h  NUMFourier.cpp  NUMFourier.h  NUMFourierTable_def.h  NUMhuber.cpp  NUMlapack.cpp  NUMselect.h  NUMsorting.h  NUMstring.cpp  Polynomial.h  Roots.cpp  regularExp.cpp
praat/dwtest/: runAllTests_batch.praat  test_Covariance.praat
praat/dwtools/: CMakeLists.txt  Confusion.cpp  Correlation.cpp  Covariance.h  DTW.cpp  EditDistanceTable.cpp  FilterBank.cpp  FilterBank.h  HMM.cpp  KlattGrid.cpp  MDS.cpp  MDS.h  MFCC.cpp  MFCC.h  Matrix_extensions.cpp  Polygon_extensions.cpp  Proximity.h  SampledIntoSampled.cpp  SoundFrames.cpp  Sound_and_Spectrogram_extensions.cpp  Sound_and_Spectrogram_extensions.h  Sound_extensions.cpp  SpeechSynthesizer.cpp  TableOfReal_extensions.h  Table_extensions.cpp  TextGridTierNavigator.cpp  TextGrid_extensions.cpp  manual_KlattGrid.cpp  praat_David_init.cpp  praat_MDS_init.cpp
praat/fon/: CMakeLists.txt  Formant.cpp  FunctionEditor.cpp  FunctionEditor.h  ManipulationEditor.cpp  Matrix.cpp  Photo.cpp  Photo.h  PitchTier.cpp  PitchTierArea_prefs.h  Pitch_to_PointProcess.cpp  Praat_tests.cpp  Praat_tests_enums.h  Sound.cpp  SoundRecorder.h  Sound_audio.cpp  Sound_to_Formant.cpp  Sound_to_Pitch.cpp  SpectrumEditor.h  SpellingChecker.cpp  TextGrid.cpp  TextGridEditor.cpp  TextGrid_Sound.cpp  TextGrid_files.cpp  TimeSoundEditor.cpp  Transition.cpp  manual_Picture.cpp  manual_Sampling.cpp  manual_annotation.cpp  manual_commands.cpp  manual_functions.cpp  manual_licenses.cpp  manual_pitch.cpp  manual_programming.cpp  manual_references.cpp  manual_scripting.cpp  manual_sound.cpp  manual_tutorials.cpp  manual_voice.cpp  manual_whatsnew.cpp  (+3 more)
praat/foned/: CMakeLists.txt  FunctionEditor.cpp  PointArea.h  SoundAnalysisArea.cpp  SoundArea.cpp  SoundRecorder.cpp  SoundRecorder.h
praat/gram/: CMakeLists.txt  Network.cpp  Network.h  OTGrammar.cpp  OTGrammar.h  OTGrammar_enums.h  OTMulti.cpp  OTMulti.h  praat_gram.cpp
praat/kar/: CMakeLists.txt
praat/main/: main_Praat.h
praat/makefiles/: makefile.defs.linux.pulse-clang  makefile.defs.linux.rpi  makefile.defs.msys-clang
praat/melder/: CMakeLists.txt  MAT.cpp  Makefile  MelderArg.h  MelderCat.h  MelderString.h  MelderThread.h  NUM.h  NUMmath.h  NUMrandom.cpp  STR.cpp  melder.h  melder_alloc.cpp  melder_app.cpp  melder_app.h  melder_atof.cpp  melder_atof.h  melder_audio.cpp  melder_audio.h  melder_audiofiles.cpp  melder_casual.cpp  melder_casual.h  melder_error.cpp  melder_error.h  melder_fatal.cpp  melder_files.cpp  melder_ftoa.cpp  melder_ftoa.h  melder_info.cpp  melder_info.h  melder_int.h  melder_kar.h  melder_progress.h  melder_real.h  melder_sort.cpp  melder_strvec.h  melder_sysenv.cpp  melder_tensor.h  melder_time.h  melder_warning.h  (+2 more)
praat/num/: CMakeLists.txt  NUMrandom.cpp
praat/sensors/: CMakeLists.txt
praat/stat/: CMakeLists.txt  TableEditor.cpp  TableOfReal.cpp  praat_Stat.cpp
praat/sys/: CMakeLists.txt  Collection.h  DataEditor.cpp  DemoEditor.cpp  Editor.h  EditorM.h  Formula.cpp  Formula.h  Graphics.cpp  Graphics.h  GraphicsP.h  GraphicsPostscript.cpp  GraphicsScreen.cpp  Graphics_colour.cpp  Graphics_image.cpp  Graphics_linesAndAreas.cpp  Graphics_record.cpp  Graphics_text.cpp  Gui.cpp  Gui.h  GuiControl.cpp  GuiDialog.cpp  GuiList.cpp  GuiMenu.cpp  GuiOptionMenu.cpp  GuiP.h  HyperPage.cpp  InfoEditor.cpp  Interpreter.cpp  Interpreter.h  ManPage.cpp  ManPage.h  ManPages.cpp  ManPages_toHtml.cpp  Manual.cpp  Picture.cpp  Picture.h  Printer.cpp  Printer.h  ScriptEditor.cpp  (+28 more)
praat/test/: runAllPraatTests.praat  runAllTests.praat  runAllTests_leak.praat
praat/test/fon/: data.praat  stereoAnalysis.praat
praat/test/kar/: unicode.praat
src/: AutoThingUtils.h  Bindings.h  CMakeLists.txt  CallableSignature.h  IndexSequence.h  Parselmouth.h  PraatUtils.h  buffer_protocol.h  constructor.h  functor_signature.h  parselmouth.cpp  praat_mfcc.cpp  version.h
src/boost_python/: constructor.h
src/common/: MovingCopyable.h
src/parselmouth/: CC.cpp  CMakeLists.txt  Data.cpp  Formant.cpp  Function.cpp  Harmonicity.cpp  Harmonicity_docstrings.h  Intensity.cpp  Interpolation.h  LPC.cpp  LPC_docstrings.h  LineSpectralFrequencies.cpp  LineSpectralFrequencies_docstrings.h  MFCC.cpp  Matrix.cpp  Parselmouth.h  Pitch.cpp  Pitch_docstrings.h  PointProcess.cpp  PointProcess_docstrings.h  Sampled.cpp  SampledXY.cpp  Sound.cpp  SoundEnums.cpp  Sound_docstrings.h  Sound_old.cpp  Spectrogram.cpp  Spectrum.cpp  TextGrid.cpp  TextGridTools.cpp  TextGridTools.h  Thing.cpp  TimeClassAspects.h  Vector.cpp  common_docstring.h  praat.cpp  praat_docstrings.h
src/praat/: CopyableAutoThing.h  MelderInfoInterceptor.h  MelderUtils.h  UndefPraatMacros.h
src/utils/: SignatureCast.h  StringUtils.h
(+241 files in other folders)
