[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
]
build-backend = "setuptools.build_meta"

[project]
name = "praat-parselmouth"
# version = <see setup.py>
description = "Praat in Python, the Pythonic way"
license = "GPL-3.0-or-later"
authors = [
    { name = "Yannick Jadoul", email = "yannick.jadoul@gmail.com" },
]
readme = "res/README_PyPI.md"
requires-python = ">=3.8"
keywords = ["praat", "speech", "signal processing", "phonetics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy>=1.7.0"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/YannickJadoul/Parselmouth"
"Bug Tracker" = "https://github.com/YannickJadoul/Parselmouth/issues"
"Documentation" = "https://parselmouth.readthedocs.io/"
"Source Code" = "https://github.com/YannickJadoul/Parselmouth"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

[tool.check-manifest]
ignore = [
    ".clang-format",
    ".pre-commit-config.yaml",
    ".readthedocs.yml",
    "binder",
    "binder/*"
]
