[build-system]
requires = [
    "cmake>=3.18",
    "scikit_build_core",
]
build-backend = "scikit_build_core.build"

[project]
name = "praat-parselmouth"
description = "Praat in Python, the Pythonic way"
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE",
    "praat/main/GNU_General_Public_License.txt",
    "praat/main/gpl-3.0.txt",
    "pybind11/LICENSE",
    "extern/fmt/LICENSE.rst"
]
authors = [
    { name = "Yannick Jadoul", email = "yannick.jadoul@gmail.com" },
]
readme = "res/README_PyPI.md"
requires-python = ">=3.9"
keywords = ["praat", "speech", "signal processing", "phonetics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: C++",
    # Programming Language :: Python :: 2
    # Programming Language :: Python :: 2.7
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["numpy>=1.7.0,<2"]
# zip_safe = False - deprecated https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

# version = <see setup.py>
dynamic = ["version"]

[project.urls]
Home = "https://github.com/YannickJadoul/Parselmouth"
Bug_Tracker = "https://github.com/YannickJadoul/Parselmouth/issues"
Source_Code = "https://github.com/YannickJadoul/Parselmouth"
Documentation = "https://parselmouth.readthedocs.io/"

[tool.scikit-build]
build-dir="_skbuild"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/version.h"
regex = "^#define PARSELMOUTH_VERSION (?P<value>[0-9a-z.]+)$"

[tool.check-manifest]
ignore = [
    ".appveyor.yml",
    ".readthedocs.yml",
    ".travis.yml",
    "binder",
    "binder/*",
]
