[metadata]
name = praat-parselmouth
# version = <see setup.py>
description = Praat in Python, the Pythonic way
long_description = file: res/README_PyPI.md
long_description_content_type = text/markdown
url = https://github.com/YannickJadoul/Parselmouth
author = Yannick Jadoul
author_email = Yannick.Jadoul@ai.vub.ac.be
project_urls =
    Bug Tracker = https://github.com/YannickJadoul/Parselmouth/issues
    Documentation = https://parselmouth.readthedocs.io/
    Source Code = https://github.com/YannickJadoul/Parselmouth
keywords = praat, speech, signal processing, phonetics
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
install_requires =
    numpy>=1.7.0
zip_safe = False

[check-manifest]
ignore =
    .appveyor.yml
    .readthedocs.yml
    .travis.yml
    binder
    binder/*
